# The-Evolution-of-Todo

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
.claude/agents/: ai-agent-builder.md  auth-integration-agent.md  auth-subagent.md  backend-api-builder.md  conversation-state-manager.md  database-subagent.md  execution-agent.md  frontend-ui-builder.md  mcp-server-builder.md  principal-architect.md  quality-gate-agent.md  specification-agent.md  ui-polisher.md
.claude/skills/ConversationManagementSkill/: SKILL.md
.claude/skills/FunctionCallingSkill/: SKILL.md
.claude/skills/GeminiIntegrationSkill/: SKILL.md
.claude/skills/JwtVerificationSkill/: SKILL.md
.claude/skills/MCPToolDefinitionSkill/: SKILL.md
.specify/memory/: constitution.md
backend/: .dockerignore  .env.example  DEPLOYMENT_GUIDE.md  DEPLOYMENT_GUIDE_URDU.md  Dockerfile  README_HF.md  main.py  pyproject.toml  requirements.txt  run_migration.py
backend/migrations/: 003_add_chat_tables.sql  complete_schema.sql
backend/src/: database.py  init_db.py  main.py  update_schema.py
backend/tests/: integration_test.py
frontend/: package.json
frontend/src/: middleware.ts
specs/002-fullstack-web-app/: data-model.md  integration-verification.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-ai-chatbot-cohere/: IMPLEMENTATION_SUMMARY.md  VALIDATION.md  checklist.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-cli-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: main.py
(+62 files in other folders)
